Fixed header's alignment issue for mobile devices

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,14 +1,14 @@
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   background: #111;
 }
 
 body {
-  font: normal 12px/1.6667 "-apple-system", BlinkMacSystemFont,
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", "Arial",
-    sans-serif;
+  font: normal 12px/1.6667 "-apple-system", BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", "Arial", sans-serif;
   margin: 0;
   padding: 0;
   font-size: 14px;
@@ -16,22 +16,61 @@ body {
   overscroll-behavior: none;
 }
 
-#root        { background: #f6f6f6; color: #333; }
-#root.dark   { background: #2a2a2a; color: #bbb; }
+#root {
+  background: #f6f6f6;
+  color: #333;
+}
+#root.dark {
+  background: #2a2a2a;
+  color: #bbb;
+}
 
-.hasCols { display: flex; flex-flow: row nowrap; }
-.hasRows { display: flex; flex-flow: column nowrap; }
-.hasCols > div { flex: 1; }
-.hasRows > div { flex: 1; }
+.hasCols {
+  display: flex;
+  flex-flow: row nowrap;
+}
+.hasRows {
+  display: flex;
+  flex-flow: column nowrap;
+}
+.hasCols > div {
+  flex: 1;
+}
+.hasRows > div {
+  flex: 1;
+}
 
 /* global styles */
-h1, h2, h3  { margin: 0; }
-a { text-decoration: none; }
-:focus             { outline-color: transparent; outline-style: none; }
-a:visited, a       { color: #67e; font-weight: bold; }
-a:hover, a:active  { color: #56a; }
-.dark a:visited, .dark a       { color: #88c; font-weight: bold; }
-.dark a:hover, .dark a:active  { color: #56a; }
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+a {
+  text-decoration: none;
+}
+:focus {
+  outline-color: transparent;
+  outline-style: none;
+}
+a:visited,
+a {
+  color: #67e;
+  font-weight: bold;
+}
+a:hover,
+a:active {
+  color: #56a;
+}
+.dark a:visited,
+.dark a {
+  color: #88c;
+  font-weight: bold;
+}
+.dark a:hover,
+.dark a:active {
+  color: #56a;
+}
 
 ul {
   margin-block-start: 0;
@@ -39,15 +78,34 @@ ul {
   padding-left: 20px;
 }
 
-.hi { font-size: 20px; margin-right: 10px; }
-.dark .hi { filter: saturate(0); }
-.nav { margin-top: 10px; }
-.instructions { max-width: 1000px; margin-top: 20px; }
-pre { font-size: 12px; margin: 0; }
-.hide { display: none; }
+.hi {
+  font-size: 20px;
+  margin-right: 10px;
+}
+.dark .hi {
+  filter: saturate(0);
+}
+.nav {
+  margin-top: 10px;
+}
+.instructions {
+  max-width: 1000px;
+  margin-top: 20px;
+}
+pre {
+  font-size: 12px;
+  margin: 0;
+}
+.hide {
+  display: none;
+}
 
-code       { background: #eee; }
-.dark code { background: #444; }
+code {
+  background: #eee;
+}
+.dark code {
+  background: #444;
+}
 
 img.icon {
   width: 1.1em;
@@ -62,7 +120,7 @@ img.icon {
 
 /* forms */
 textarea,
-input[type=text] {
+input[type="text"] {
   background-color: #fff;
   color: #333;
   border: 1px solid #ccc;
@@ -71,8 +129,8 @@ input[type=text] {
   text-overflow: ellipsis;
 }
 .dark textarea,
-.dark input[type=text],
-.dark input[type=checkbox] {
+.dark input[type="text"],
+.dark input[type="checkbox"] {
   background-color: #666;
   color: #ddd;
   border: 1px solid #777;
@@ -105,17 +163,24 @@ input:focus {
   background-color: #f1f1f1;
 }
 
-
 /* Sections */
 #header {
-  align-items: center;
+  display: flex;
+  align-items: start;
   padding: 5px 20px;
   background: #111;
   color: #ddd;
   font-weight: bold;
+  flex-direction: column;
 }
-#header a:visited, #header a       { color: #aaf; }
-#header a:hover, #header a:active  { color: #ccf; }
+#header a:visited,
+#header a {
+  color: #aaf;
+}
+#header a:hover,
+#header a:active {
+  color: #ccf;
+}
 
 #title img.icon {
   filter: invert(1);
@@ -137,7 +202,7 @@ input:focus {
 }
 
 #darkmode {
-  flex: 0 0 120px;
+  flex: 0 0 90px;
   padding: 5px 10px;
   align-items: center;
   justify-content: flex-start;
@@ -148,23 +213,52 @@ input:focus {
   margin: 0 5px;
 }
 
-#darkmode > svg.fa-sun { color: gold; }
-.dark #darkmode > svg.fa-sun { color: unset; }
-#darkmode > svg.fa-moon { color: unset; }
-.dark #darkmode > svg.fa-moon { color: #88c; }
+#darkmode > svg.fa-sun {
+  color: gold;
+}
+.dark #darkmode > svg.fa-sun {
+  color: unset;
+}
+#darkmode > svg.fa-moon {
+  color: unset;
+}
+.dark #darkmode > svg.fa-moon {
+  color: #88c;
+}
 
-#octocat { flex: 0 0 40px; }
-#octocat a:visited, #octocat a       { color: #fff; }
-#octocat a:hover, #octocat a:active  { color: #ddd; }
+#octocat {
+  flex: 0 0 40px;
+}
+#octocat a:visited,
+#octocat a {
+  color: #fff;
+}
+#octocat a:hover,
+#octocat a:active {
+  color: #ddd;
+}
 
-#content { padding: 0 20px 60px 20px; }
-#footer  {
+#content {
+  padding: 0 20px 60px 20px;
+}
+#footer {
   background: #111;
   padding: 20px;
   color: #aaa;
   font-size: 12px;
 }
 
+@media screen and (min-width: 614px) {
+  div#header {
+    flex-direction: row;
+    align-items: center;
+  }
+  div#darkmode {
+    display: flex;
+    padding: 0 28px;
+    align-items: center;
+  }
+}
 
 /* Filters */
 .filters {
@@ -210,7 +304,6 @@ div.container {
 div.category {
   padding: 2px 5px;
 }
-
 
 /* Category Pages */
 .logo {
@@ -353,7 +446,6 @@ tbody td.wikidata div.viewlink {
   margin: 0 2px;
 }
 
-
 /* slider/switch */
 
 /* The switch - the box around the slider */
@@ -382,8 +474,8 @@ tbody td.wikidata div.viewlink {
   right: 0;
   bottom: 0;
   background-color: #aaa;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -394,8 +486,8 @@ tbody td.wikidata div.viewlink {
   left: 2px;
   bottom: -5px;
   background-color: #ddd;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
